--- a/.gitignore
+++ b/.gitignore
@@ -256,3 +256,5 @@ static/images/test_images/018-bakezori.png
 static/images/test_images/019-azukiarai.png
 
 static/images/test_images/020-chochin obake.png
+
+src/test.py
