Refractor: owncloud -> cloudinary

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,1 @@
-SECRET_KEY=''
-DB_USERNAME=''
-DB_PASSWORD=''
-JWT_SECRET_KEY=''
-URL_AVATAR=''
-URL_UPLOADS=''
-URL_UPLOADS_DROP=''
-USER_OWNCLOUD=''
-PW_OWNCLOUD=''
+# TODO:
