--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
-# TODO:
+SECRET_KEY=''
+DB_USERNAME=''
+DB_PASSWORD=''
+JWT_SECRET_KEY=''
+CLOUD_NAME=''
+CLOUD_API_KEY=''
+CLOUD_API_SECRET=''
+CLOUD_ENDPOINT=''
+URL_AVATARS=''
+URL_UPLOADS=''
