Tryout cover flow

--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,13 @@ static/images/test_images/019-azukiarai.png
 static/images/test_images/020-chochin obake.png
 
 src/test.py
+
+static/images/IMG01.jpg
+
+static/images/IMG02.jpg
+
+static/images/IMG03.jpg
+
+static/images/IMG04.jpg
+
+static/images/IMG05.jpg
