--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ CLOUD_API_SECRET=''
 CLOUD_ENDPOINT=''
 URL_AVATARS=''
 URL_UPLOADS=''
+MAIL_PORT=''
+MAIL_USE_TLS=''
+MAIL_USERNAME=''
+MAIL_PASSWORD=''
+ADMINS=['','']
